Added everything worked on for now